@@ -1,37 +1,34 @@
 package org.asciidoctor.integrationguide;
 
-import org.apache.commons.io.IOUtils;
 import org.asciidoctor.Asciidoctor;
 import org.asciidoctor.Attributes;
 import org.asciidoctor.Options;
 import org.asciidoctor.SafeMode;
-import org.asciidoctor.util.ClasspathHelper;
-import org.junit.jupiter.api.BeforeEach;
+import org.asciidoctor.test.AsciidoctorInstance;
+import org.asciidoctor.test.ClasspathResource;
+import org.asciidoctor.test.extension.AsciidoctorExtension;
+import org.asciidoctor.test.extension.ClasspathExtension;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.api.io.CleanupMode;
 import org.junit.jupiter.api.io.TempDir;
 
 import java.io.File;
-import java.io.FileReader;
+import java.nio.file.Files;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.*;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
+@ExtendWith({AsciidoctorExtension.class, ClasspathExtension.class})
 public class OptionsTest {
 
+    @AsciidoctorInstance
     private Asciidoctor asciidoctor;
-    private ClasspathHelper classpathResources;
 
     @TempDir(cleanup = CleanupMode.NEVER)
     public File tempDir;
 
-    @BeforeEach
-    public void beforeEach() {
-        asciidoctor = Asciidoctor.Factory.create();
-        classpathResources = new ClasspathHelper();
-        classpathResources.setClassloader(this.getClass());
-    }
 
     @Test
     public void simple_options_example_embeddable_document() {
@@ -68,7 +65,7 @@ public class OptionsTest {
     }
 
     @Test
-    public void convert_in_unsafe_mode() {
+    public void convert_in_unsafe_mode(@ClasspathResource("includingcontent.adoc") File inputDocument) {
 //tag::unsafeConversion[]
         File sourceFile =
 //end::unsafeConversion[]
@@ -79,7 +76,7 @@ public class OptionsTest {
             new File("includingcontent.adoc");
 //end::unsafeConversion[]
 */
-                classpathResources.getResource("includingcontent.adoc");
+                inputDocument;
 //tag::unsafeConversion[]
         String result = asciidoctor.convertFile(
                 sourceFile,
@@ -109,7 +106,7 @@ public class OptionsTest {
 
         assertTrue(targetFile.exists());
         assertThat(
-                IOUtils.toString(new FileReader(targetFile)),
+                Files.readString(targetFile.toPath()),
                 containsString("<p>Hello World"));
 //end::optionToFile[]
     }
